[gd_scene load_steps=17 format=3 uid="uid://daaxo0hgxf57w"]

[ext_resource type="Script" path="res://Scripts/Nonogram/Ice.gd" id="1_cg8q5"]
[ext_resource type="Material" uid="uid://d2u1n3w4o8fkt" path="res://Materials/ice.material" id="2_34j4h"]
[ext_resource type="Material" uid="uid://di6401h323n6t" path="res://Materials/ice_range_hover.material" id="3_pdlyf"]
[ext_resource type="Material" uid="uid://ds6djvweorv7w" path="res://Materials/ice_hover.material" id="3_xmoqo"]
[ext_resource type="Material" uid="uid://unfba3tkuo6d" path="res://Materials/ice_range.material" id="4_bsrcs"]
[ext_resource type="Material" uid="uid://cfh60m5km0cer" path="res://Materials/ice_destroyed.material" id="6_ijo2v"]
[ext_resource type="Material" uid="uid://dypywgtm4dy2f" path="res://Materials/ice_destroyed_range.material" id="7_4tnnt"]
[ext_resource type="Script" path="res://Scripts/Nonogram/IceBobbing.gd" id="8_fxfo4"]
[ext_resource type="Texture2D" uid="uid://c6f7ilpfjib3i" path="res://Sprites/cross.png" id="9_svpcf"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ltcls"]
size = Vector3(1, 0.3, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_gcdo1"]
size = Vector3(1, 0.3, 1)

[sub_resource type="Curve" id="Curve_xnapt"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.824524, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_wq2mr"]
curve = SubResource("Curve_xnapt")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_u72lj"]
direction = Vector3(1, 10, 0)
gravity = Vector3(0, -5, 0)
initial_velocity_min = 3.0
initial_velocity_max = 7.0
scale_min = 0.05
scale_max = 0.1
scale_curve = SubResource("CurveTexture_wq2mr")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3dvdg"]
albedo_color = Color(0.615686, 0.878431, 1, 1)
emission_enabled = true
emission = Color(0.639216, 0.886275, 1, 1)
emission_energy_multiplier = 1.3

[sub_resource type="SphereMesh" id="SphereMesh_6npv0"]
material = SubResource("StandardMaterial3D_3dvdg")

[node name="Ice" type="StaticBody3D"]
script = ExtResource("1_cg8q5")
ice_material = ExtResource("2_34j4h")
ice_hover_material = ExtResource("3_xmoqo")
ice_range_material = ExtResource("4_bsrcs")
ice_range_hover_material = ExtResource("3_pdlyf")
ice_destroyed_material = ExtResource("6_ijo2v")
ice_destroyed_range_material = ExtResource("7_4tnnt")

[node name="IceShape" type="CSGBox3D" parent="."]
material_override = ExtResource("2_34j4h")
size = Vector3(1, 0.3, 1)
script = ExtResource("8_fxfo4")

[node name="IceCollision" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_ltcls")

[node name="IceHit" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="IceHit"]
shape = SubResource("BoxShape3D_gcdo1")

[node name="Marker" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.16, 0)
visible = false
modulate = Color(1, 1, 1, 0.627451)
texture = ExtResource("9_svpcf")

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
emitting = false
amount = 15
lifetime = 0.4
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_u72lj")
draw_pass_1 = SubResource("SphereMesh_6npv0")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
